fixed navigation problem on iphone 4 size screens portrait

--- a/css/home.css
+++ b/css/home.css
@@ -945,7 +945,7 @@ textarea{
 
 @media (max-width: 327px){
 
-	.border-top div:first-child{
+	.border-top div:last-child{
 		text-align: right;
 		padding-right: 2px;
 		margin-top: -17px;
